# CLATLM_ENSO

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: benchmark_efficiency.py  evaluate_noaa_oisst_v21.py  finetune_noaa_oisst_v21.py  plot_results.py  run_full_model.py  train_pretrain_cmip6.py
src/: __init__.py  config.py  data.py  inference.py  losses.py  metrics.py  plotting.py  train.py  utils.py
src/models/: __init__.py  cla.py  clatlm.py  mamba_core.py  tlm.py
tests/: test_shapes.py
